<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/dp_270"
    android:layout_height="match_parent"
    android:background="@drawable/hamber_background"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rl_profile_edit_root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10">

        <TextView
            android:id="@+id/iv_delivery_address_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="@dimen/dp_5"
            android:layout_marginRight="@dimen/dp_10"
            android:gravity="center"
            android:padding="@dimen/dp_4"
            android:text="Edit"
            android:textColor="@color/color_base"
            android:textSize="@dimen/sp_9"
            android:textStyle="italic|bold"
            android:visibility="gone" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <com.app.customerapp.utils.RoundedImageView
                android:id="@+id/iv_signup_profile"
                android:layout_width="@dimen/dp_80"
                android:layout_height="@dimen/dp_80"
                android:layout_gravity="center_horizontal"
                android:scaleType="centerCrop"
                android:src="@drawable/index"
                app:sriv_border_color="@color/color_base"
                app:sriv_border_width="@dimen/dp_2"
                app:sriv_oval="true" />

            <TextView
                android:id="@+id/tv_home_left_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_3"
                android:gravity="center"
                android:text="9711887660"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_13"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_home_left_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_3"
                android:gravity="center"
                android:text="9711887660"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_13"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_home_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:maxLines="3"
                android:text="11 Sector 22, Noida"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_11"
                android:textStyle="italic" />
        </LinearLayout>

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/dp_10"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_35"
                android:background="@color/color_base">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:gravity="center_vertical"
                    android:text="@string/profile"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_13"
                    android:textStyle="bold" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/linear_home_myprofile"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_35"
                android:layout_marginTop="@dimen/dp_5"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:src="@drawable/hamber_my_profile_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:gravity="center_vertical"
                    android:text="@string/my_profile"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_13" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_35"
                android:layout_marginTop="@dimen/dp_5"
                android:background="@color/color_base">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:gravity="center_vertical"
                    android:text="@string/shop"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_13"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_home_myorder"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_35"
                android:layout_marginTop="@dimen/dp_5"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:src="@drawable/invitation_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:gravity="center_vertical"
                    android:text="@string/my_order"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_13" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_home_my_cart"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_35"
                android:layout_marginTop="@dimen/dp_5"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:src="@drawable/invite_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:gravity="center_vertical"
                    android:text="@string/my_cart"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_13" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_home_track_order"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_35"
                android:layout_marginTop="@dimen/dp_5"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:src="@drawable/setting_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:gravity="center_vertical"
                    android:text="@string/track_my_order"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_13" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_35"
                android:layout_marginTop="@dimen/dp_5"
                android:background="@color/color_base">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:gravity="center_vertical"
                    android:text="@string/address"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_13"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_home_myaddress"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_35"
                android:layout_marginTop="@dimen/dp_5"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:src="@drawable/hamber_my_profile_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:gravity="center_vertical"
                    android:text="@string/my_address"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_13" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_35"
                android:layout_marginTop="@dimen/dp_5"
                android:background="@color/color_base">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:gravity="center_vertical"
                    android:text="@string/other"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_13"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_home_apprate"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_35"
                android:layout_marginTop="@dimen/dp_5"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:src="@drawable/invitation_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:gravity="center_vertical"
                    android:text="@string/app_rate"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_13" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_home_shareapp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_35"
                android:layout_marginTop="@dimen/dp_5"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:src="@drawable/invite_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:gravity="center_vertical"
                    android:text="@string/share_app"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_13" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_home_contactus"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_35"
                android:layout_marginTop="@dimen/dp_5"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:src="@drawable/msg_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:gravity="center_vertical"
                    android:text="@string/contact_us"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_13" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_home_logout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_35"
                android:layout_marginBottom="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_5"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:src="@drawable/logout_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:gravity="center_vertical"
                    android:text="@string/logout"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_13" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>