<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <include
        android:id="@+id/toolbar_root_layout"
        layout="@layout/toolbar_sub_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/no_data_available"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:textColor="@color/color_base"
        android:textSize="@dimen/sp_20"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/root_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar_root_layout">

        <ListView
            android:id="@+id/lv_place_order"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/linearLayout"
            android:divider="@android:color/transparent" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/color_base"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:orientation="vertical"
                android:padding="@dimen/dp_5">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_5"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_place_order_total_quantity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp_10"
                        android:text="@string/label_Amount"
                        android:textColor="@color/white"
                        android:textSize="@dimen/sp_15" />

                    <TextView
                        android:id="@+id/tv_place_order_total_amount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/dp_10"
                        android:gravity="right"
                        android:text="@string/label_Total_Rs"
                        android:textColor="@color/white"
                        android:textSize="@dimen/sp_15" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_switch_place_order"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp_10"
                        android:text="@string/label_Delivery_Type"
                        android:textColor="@color/white"
                        android:textSize="@dimen/sp_15" />

                    <android.support.v7.widget.SwitchCompat
                        android:id="@+id/switch_place_order"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginLeft="@dimen/dp_20" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical">

                    <TextView
                        android:id="@+id/tv_place_order_expected_delivery_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/dp_10"
                        android:layout_marginLeft="@dimen/dp_10"
                        android:layout_marginTop="@dimen/dp_10"
                        android:text="@string/label_Expected_Delivery_Time"
                        android:textColor="@color/white"
                        android:textSize="@dimen/sp_15" />

                    <Spinner
                        android:id="@+id/spinner_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:singleLine="true" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/dp_10"
                        android:layout_marginLeft="@dimen/dp_10"
                        android:layout_marginTop="@dimen/dp_10"
                        android:text="@string/label_Delivery_Address_Identifier"
                        android:textColor="@color/white"
                        android:textSize="@dimen/sp_15" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tv_place_order_add_address"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/dp_10"
                            android:layout_marginLeft="@dimen/dp_10"
                            android:layout_marginTop="@dimen/dp_10"
                            android:background="@drawable/edittext_background"
                            android:padding="@dimen/dp_5"
                            android:text="@string/label_Add_Address"
                            android:textColor="@color/color_base"
                            android:textSize="@dimen/sp_13" />

                        <Spinner
                            android:id="@+id/spinner_2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:singleLine="true"
                            android:visibility="gone" />
                    </LinearLayout>

                </LinearLayout>


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:background="@color/gray_color"></View>

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_10">

                <TextView

                    android:id="@+id/tv_place_order_continue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:text="@string/label_Continue_Shopping"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_13" />

                <TextView
                    android:id="@+id/tv_place_order_checkout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/dp_10"
                    android:gravity="right"
                    android:text="@string/label_Checkout"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_20" />

            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:indeterminate="false"
        android:visibility="gone" />

</RelativeLayout>
